--- a/app/styles/dependencies/helpers.scss
+++ b/app/styles/dependencies/helpers.scss
@@ -5,6 +5,7 @@ $main-height: calc(100vh - #{$navbar});
 **** VERTICAL HEIGHT
 ***********************/
 
+$negative-layer: -1;
 $first-layer: 2;
 $second-layer: 3;
 $third-layer: 4;
